--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ img {
     margin:  156px auto 0;
     padding: auto;
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 h2 {
@@ -70,4 +72,41 @@ button{
     text-align: center;
     color: #ffffff;
     margin: 79px auto;
+    cursor: pointer;
 }
+
+button:hover {
+
+    opacity: 0.8;
+}
+
+button:active {
+    opacity: 0.4;
+    box-shadow: 0px 18px 40px 0px #AEC346;
+}
+
+@media (max-width: 900px) {
+    div {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+
+    input {
+        width: 100%;
+        font-size: 30px;
+        height: 60px;
+    }
+
+    button {
+        width: 100%;
+        font-size: 28px;
+        height: 60px;
+        margin: 20px 0 0;
+    }
+    button:active {
+        opacity: 1;
+    }
+}
+
+
