--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,28 @@ body {
 }
 
 img {
-    margin:  156px auto 0;
+    margin:  56px auto 0;
     padding: auto;
     display: block;
     max-width: 100%;
     height: auto;
 }
 
+h3 {
+    width: 5%;
+    margin: 0 auto 5px;
+    color: #ffffff;
+    text-align: center; 
+    font-weight: 300;
+    font-size: 32px;
+    line-height: 38px;
+    background-color: #AEC346;
+    border-radius: 35px;
+}
+
 h2 {
     width: 50%;
-    margin: 126px auto 5px;
+    margin: 75px auto 5px;
     color: #ffffff;
     text-align: center; 
     font-weight: 300;
@@ -86,6 +98,10 @@ button:active {
 }
 
 @media (max-width: 900px) {
+    .result-h2 {
+        margin: 25px auto 5px;
+    }
+
     div {
         flex-direction: column;
         align-items: center;
@@ -106,6 +122,9 @@ button:active {
     }
     button:active {
         opacity: 1;
+    }
+    h3 {
+        width: 10%;
     }
 }
 
